03-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
  namespace: venv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: echo-server
          image: docker.io/selenesa/my-flask-app:v2
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
