03-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service
  namespace: venv
spec:
  selector:
    app: echo-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
