03-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server-ingress
  namespace: venv
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: echo-server.alexandrsuslov-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server-service
                port:
                  number: 80
